2007-12-07  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/oss/gstosssink.c:
	* sys/oss/gstosssrc.c:
	Allow the AUDIODEV environment variable to redirect us
	to a different default OSS device, like sunaudiosink does
	on Solaris (makes audio play automatically on SunRays).

2007-12-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/audiofx/audioamplify.c: (gst_audio_amplify_transform_ip):
	* gst/audiofx/audiochebyshevfreqband.c:
	(gst_audio_chebyshev_freq_band_transform_ip):
	* gst/audiofx/audiochebyshevfreqlimit.c:
	(gst_audio_chebyshev_freq_limit_transform_ip):
	* gst/audiofx/audiodynamic.c: (gst_audio_dynamic_transform_ip):
	* gst/audiofx/audioinvert.c: (gst_audio_invert_transform_ip):
	The transform_ip() methods should do nothing if in passthrough mode.
	It might get non-writable buffers in that case but the buffer might
	as well be writable.

	* gst/audiofx/audiopanorama.c: (gst_audio_panorama_transform):
	The transform() methods won't be called in passthrough mode and
	otherwise the buffer is always writable so don't check here.

2007-12-06  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_srcpad_event):
	  Fix seeking in .wav files again (#501775).  Some people seem to think
	  they don't need to test their changes when they're just 'reflowing'
	  some code.

2007-12-05  Wim Taymans  <wim.taymans@gmail.com>

	* gst/autodetect/gstautovideosink.c:
	(gst_auto_video_sink_class_init), (gst_auto_video_sink_dispose),
	(gst_auto_video_sink_init),
	(gst_auto_video_sink_create_element_with_pretty_name),
	(gst_auto_video_sink_find_best),
	(gst_auto_video_sink_set_property),
	(gst_auto_video_sink_get_property):
	* gst/autodetect/gstautovideosink.h:
	Fix docs.
	Use same error reporting code as autoaudiosink.
	Add property to filter sinks based on caps. Only select raw video sinks
	by default for backwards compat.
	API: GstAutoVideoSink::filter-caps

2007-12-05  Wim Taymans  <wim.taymans@gmail.com>
